...
            android:translationY="44dp" />
        <Constraint
            android:id="@id/layoutPagerIndicator"
            android:alpha="0"
            android:translationY="48dp" />
        <Constraint
            android:id="@id/btnGetStarted"
            android:alpha="0"
            android:translationY="56dp"
            android:scaleX="0.98"
            android:scaleY="0.98" />
    </ConstraintSet>

...
